# openmoko-gsoc2008

./: .gitignore
frameworkd/: AUTHORS  MAINTAINERS  Makefile.am  autogen.sh  configure.ac  frameworkd.conf  frameworkd.py
frameworkd-old/: frameworkd
frameworkd/src/: main.vala
fsod/: AUTHORS  MAINTAINERS  Makefile.am  README  TODO  autogen.sh  configure.ac
fsod/etc/: fsod.conf
fsod/etc/dbus-1/system.d/: fsod.conf
fsod/m4/: python.m4
fsod/recipes/: fsod_git.bb
fsod/src/: Makefile.am  fsod.vala  logger.vala  main.vala  options.vala  resource.vala  subsystem.vala
fsod/src/subsystems/: Makefile.am
fsod/src/subsystems/Device/: Device.conf  Device.vala  Makefile.am  helpers.vala
fsod/src/subsystems/Device/accelerometer/: Makefile.am  accelerometer.plugin  accelerometer.vala
fsod/src/subsystems/Device/audio/: Makefile.am  audio.vala
fsod/src/subsystems/Device/display/: Makefile.am  display.plugin  display.vala
fsod/src/subsystems/Device/idlenotifier/: Makefile.am  idlenotifier-helpers.c  idlenotifier-helpers.h  idlenotifier.plugin  idlenotifier.vala
fsod/src/subsystems/Device/info/: Makefile.am  info.plugin  info.vala
fsod/src/subsystems/Device/input/: Makefile.am  input-helpers.c  input-helpers.h  input.plugin  input.vala
fsod/src/subsystems/Device/led/: Makefile.am  led.plugin  led.vala
fsod/src/subsystems/Device/power/: Makefile.am  power-helpers.c  power-helpers.h  power-helpers.vapi  power.plugin  power.vala
fsod/src/subsystems/Device/powercontrol/: Makefile.am  powercontrol-helpers.c  powercontrol-helpers.vapi  powercontrol.plugin  powercontrol.vala
fsod/src/subsystems/Device/rtc/: Makefile.am  rtc-helpers.c  rtc.plugin  rtc.vala
fsod/src/subsystems/Python/: Makefile.am  PythonManager.vala  fsod-python-plugin.c  fsod-python-plugin.h  fsod-python-plugin.vapi  test.py
fsod/src/subsystems/Python/bindings/: Makefile.am  fsod.defs  fsod.override
fsod/src/subsystems/Python/onetworkd/: __init__.py  dhcp.py  helpers.py  network.py  sharing.py
fsod/src/subsystems/Python/otimed/: __init__.py
fsod/src/subsystems/Time/: Makefile.am  Time.vala  time-helpers.c  time-helpers.vapi
fsod/vapi/: config.vapi  fsod.gidl  fsod.vapi
odeviced/: Device.conf  MAINTAINERS  Makefile.am  README  autogen.sh  configure.ac
odeviced-old/: AUTHORS  autogen.sh
odeviced-old/docs/: Internals.txt
odeviced-old/etc/init.d/: odeviced
odeviced-old/src/daemon/: odeviced.vala
odeviced-old/src/plugins/: Makefile.am
odeviced-old/src/plugins/accelerometer/: Makefile.am  accelerometer-helpers.vapi  accelerometer.plugin
odeviced-old/src/plugins/audio/: Makefile.am  audio.plugin  audio.vala
odeviced-old/src/plugins/input/: Makefile.am  input-helpers.c  input-helpers.vapi  input.plugin
odeviced-old/src/plugins/led/: led.plugin  led.vala
odeviced-old/src/plugins/power/: Makefile.am  power-helpers.h  power-helpers.vapi  power.vala
odeviced-old/src/plugins/powercontrol/: Makefile.am
odeviced-old/src/plugins/rtc/: Makefile.am  rtc-helpers.vapi  rtc.plugin  rtc.vala
odeviced-old/vapi/: odeviced.vapi
odeviced/conf/: odeviced.conf
odeviced/docs/: Internals.txt  PLUGINS.txt
odeviced/etc/: odeviced.conf
odeviced/etc/dbus-1/system.d/: odeviced.conf
odeviced/plugins/: Makefile.am
odeviced/plugins/backlight/: Makefile.am  backlight.c  backlight.conf  backlight.h  backlight.vala
odeviced/plugins/powercontrol/: Makefile.am  powercontrol.c  powercontrol.conf  powercontrol.h  powercontrol.vala
odeviced/plugins/wifi/: Makefile.am  wifi.c  wifi.conf  wifi.h  wifi.vala
odeviced/recipes/: odeviced_git.bb
odeviced/src/: Makefile.am  helpers.vala  odeviced.vala  plugin.vala  service.vala
odeviced/src/daemon/: helpers.vala  odeviced.vala  plugin.vala  service.vala
odeviced/src/plugins/: Makefile.am
odeviced/src/plugins/accelerometer/: accelerometer-helpers.c  accelerometer.vala
odeviced/src/plugins/audio/: Makefile.am  audio.vala
odeviced/src/plugins/backlight/: Makefile.am  backlight.c  backlight.h  backlight.plugin  backlight.vala
odeviced/src/plugins/display/: Makefile.am  display.c  display.h  display.plugin  display.vala
odeviced/src/plugins/idlenotifier/: Makefile.am  idlenotifier-helpers.c  idlenotifier-helpers.vapi  idlenotifier.plugin  idlenotifier.vala
odeviced/src/plugins/input/: Makefile.am  input-helpers.c  input-helpers.h  input-helpers.vapi  input.c  input.h  input.plugin  input.vala
odeviced/src/plugins/led/: Makefile.am  led.vala
odeviced/src/plugins/power/: Makefile.am  power.c  power.h  power.plugin  power.vala
odeviced/src/plugins/powercontrol/: Makefile.am  powercontrol.c  powercontrol.h  powercontrol.plugin  powercontrol.vala
odeviced/src/plugins/rtc/: Makefile  Makefile.am  Makefile.in  helpers.c  helpers.h  odeviced.c  odeviced.h  plugin.c  plugin.h  rtc-helpers.c  rtc-helpers.vapi  rtc.c  rtc.h  rtc.la  rtc.lo  rtc.plugin  rtc.vala  service.c  service.h
odeviced/src/plugins/rtc/.deps/: rtc.Plo
odeviced/src/plugins/rtc/.libs/: rtc.la  rtc.lai
odeviced/src/plugins/wifi/: Makefile.am  wifi-helpers.c  wifi-helpers.vapi  wifi.c  wifi.h  wifi.plugin  wifi.vala
odeviced/utils/: shell.py
odeviced/vapi/: odeviced.vapi
opimd/: __init__.py  backend_manager.py  domain_manager.py  helpers.py  pimb_csv-contacts.py  pimb_sim-contacts-fso.py  pimb_sim-messages-fso.py  pimd_contacts.py  pimd_messages.py  settings_manager.py  test_client.py
opimd/docs/: api_overview.txt  contact_fields.txt  message_fields.txt
